small frontend changes.

--- a/css/supercell.css
+++ b/css/supercell.css
@@ -7,3 +7,7 @@ body {
 .list-papers > li {
 	padding-bottom: 1em;
 }
+
+.jumbotron {
+  background-image: linear-gradient(120deg, #efefef, #e0e0e0);
+}
