--- a/css/supercell.css
+++ b/css/supercell.css
@@ -9,5 +9,5 @@ body {
 }
 
 .jumbotron {
-  background-image: linear-gradient(120deg, #efefef, #e0e0e0);
+  background-image: radial-gradient(#f2f2f2, #e0e0e0);
 }
